First Project Upload
This is the first upload of the new version of the project.
Still has some minor details to fix before its ready to publish.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
-Assets/AssetStoreTools*
+RealTimePainting/[Ll]ibrary/
+RealTimePainting/[Tt]emp/
+RealTimePainting/[Oo]bj/
+RealTimePainting/[Bb]uild/
+RealTimePainting/[Bb]uilds/
+RealTimePainting/Assets/AssetStoreTools*
 
 # Visual Studio cache directory
 .vs/
